src/objects/RP_Youtube__mdt.object
<CustomObject>
    <fields>
        <fullName>RP_Youtube_API_Endpoint__c</fullName>
        <label>RP Youtube API Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RP_Youtube_Channel_Name__c</fullName>
        <label>RP Youtube Channel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RP_Youtube_Playlist_Id__c</fullName>
        <label>RP Youtube Playlist Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RP Youtube Metadata</label>
    <pluralLabel>RP Youtube Metadata</pluralLabel>
</CustomObject>